--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Gorrie <gorriecoe@gmail.com>",
   "main": "lib/index.js",
   "bin": {
-    "projects": "./bin/projects.js"
+    "project": "./bin/project.js"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -17,7 +17,6 @@
     "colors": "^1.0.3",
     "find-config": "^1.0.0",
     "form-data": "^2.1.2",
-    "gh-got": "^5.0.0",
     "got": "^6.7.1",
     "inquirer": "^0.8.3",
     "is-root": "^1.0.0",
